--- a/package.json
+++ b/package.json
@@ -7,31 +7,52 @@
   },
   "scripts": {
     "dev": "now dev -A now.dev.json",
+    "nice": "next",
+    "start": "next start",
+    "build": "next build",
     "deploy": "now",
     "generate": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "@material-ui/core": "^4.2.0",
+    "@absinthe/socket": "^0.2.1",
+    "@absinthe/socket-apollo-link": "^0.2.1",
+    "@apollo/react-hooks": "^3.0.0",
+    "@apollo/react-ssr": "^3.0.0",
+    "@jumpn/utils-graphql": "^0.6.0",
+    "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
     "@sweetalert/with-react": "^0.1.1",
     "@zeit/next-sass": "^1.0.1",
     "apollo-boost": "^0.4.3",
+    "apollo-link": "^1.2.12",
     "apollo-link-context": "^1.0.18",
     "apollo-link-http": "^1.5.15",
     "classnames": "^2.2.6",
-    "cookie": "^0.4.0",
+    "date-fns": "^1.30.1",
+    "date-fns-timezone": "^0.1.4",
+    "date-fns-tz": "^1.0.7",
     "dayjs": "^1.8.14",
     "formik": "^1.5.7",
     "graphql": "^14.2.2",
+    "immer": "^3.2.0",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "^9.0.0",
+    "js-cookie": "^2.2.1",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
+    "next": "^9.0.3",
+    "next-cookies": "^1.1.2",
     "next-images": "^1.1.2",
     "node-sass": "^4.12.0",
+    "phoenix": "^1.4.9",
     "react": "^16.8.6",
     "react-apollo": "^2.5.8",
     "react-dom": "^16.8.6",
     "react-id-swiper": "^2.3.1",
+    "react-spinners": "^0.5.12",
+    "react-sticky-box": "^0.8.0",
     "react-stripe-checkout": "^2.6.3",
+    "react-timeago": "^4.4.0",
+    "render-if": "^0.1.1",
     "styled-components": "^4.3.2",
     "sweetalert": "^2.1.2"
   },
