--- a/now.json
+++ b/now.json
@@ -1,19 +1,23 @@
 {
-    "version": 2,
-    "name": "infusion",
-    "regions": ["lhr1"],
-    "build": {
-      "env": {
-        "API_URL": "https://server.robert-rapiteanu.me/",
-        "WS_URL": "ws://localhost:4000/socket"
-      }
+  "version": 2,
+  "name": "infusion",
+  "regions": ["lhr1"],
+  "build": {
+    "env": {
+      "API_URL": "https://server.robert-rapiteanu.me/",
+      "WS_URL": "ws://localhost:4000/socket"
+    }
+  },
+  "builds": [{ "src": "next.config.js", "use": "@now/next" }],
+  "routes": [
+    { "src": "/user/(?<id>[^/]+)$", "dest": "/user?id=$id" },
+    {
+      "src": "/user/confrim/(?<token>[^/]+)$",
+      "dest": "/confirm?token=$token"
     },
-    "builds": [
-        { "src": "next.config.js", "use": "@now/next" }
-      ],
-    "routes": [
-      { "src": "/zone/(?<id>[^/]+)$", "dest": "/zone?id=$id" },
-      { "src": "/user/confrim/(?<token>[^/]+)$", "dest": "/confirm?token=$token" },
-      { "src": "/user/change-password/(?<token>[^/]+)$", "dest": "/change-password?token=$token" }
-    ]
+    {
+      "src": "/user/change-password/(?<token>[^/]+)$",
+      "dest": "/change-password?token=$token"
+    }
+  ]
 }
