--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "10.x"
+    "node": ">10.x"
   },
   "scripts": {
     "dev": "now dev -A now.dev.json",
@@ -16,51 +16,51 @@
   "dependencies": {
     "@absinthe/socket": "^0.2.1",
     "@absinthe/socket-apollo-link": "^0.2.1",
-    "@apollo/react-hooks": "^3.0.0",
-    "@apollo/react-ssr": "^3.0.0",
+    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/react-ssr": "^3.1.3",
     "@jumpn/utils-graphql": "^0.6.0",
-    "@material-ui/core": "^4.3.2",
-    "@material-ui/icons": "^4.2.1",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
     "@sweetalert/with-react": "^0.1.1",
     "@zeit/next-sass": "^1.0.1",
-    "apollo-boost": "^0.4.3",
-    "apollo-link": "^1.2.12",
-    "apollo-link-context": "^1.0.18",
-    "apollo-link-http": "^1.5.15",
+    "apollo-boost": "^0.4.7",
+    "apollo-link": "^1.2.13",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-http": "^1.5.16",
     "classnames": "^2.2.6",
     "date-fns": "^1.30.1",
     "date-fns-timezone": "^0.1.4",
     "date-fns-tz": "^1.0.7",
-    "dayjs": "^1.8.14",
+    "dayjs": "^1.8.22",
     "formik": "^1.5.7",
-    "graphql": "^14.2.2",
+    "graphql": "^14.6.0",
     "immer": "^3.2.0",
     "isomorphic-unfetch": "^3.0.0",
     "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
-    "next": "^9.0.3",
-    "next-cookies": "^1.1.2",
-    "next-images": "^1.1.2",
-    "node-sass": "^4.12.0",
-    "phoenix": "^1.4.9",
-    "react": "^16.8.6",
-    "react-apollo": "^2.5.8",
-    "react-dom": "^16.8.6",
+    "next": "^9.2.2",
+    "next-cookies": "^2.0.3",
+    "next-images": "^1.3.1",
+    "node-sass": "^4.13.1",
+    "phoenix": "^1.4.15",
+    "react": "^16.13.0",
+    "react-apollo": "^3.1.3",
+    "react-dom": "^16.13.0",
     "react-id-swiper": "^2.3.1",
-    "react-spinners": "^0.5.12",
+    "react-spinners": "^0.8.1",
     "react-sticky-box": "^0.8.0",
     "react-stripe-checkout": "^2.6.3",
     "react-timeago": "^4.4.0",
     "render-if": "^0.1.1",
-    "styled-components": "^4.3.2",
+    "styled-components": "^5.0.1",
     "sweetalert": "^2.1.2"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^1.3.1",
-    "@graphql-codegen/typescript": "1.3.1",
-    "@graphql-codegen/typescript-operations": "^1.3.1",
-    "@graphql-codegen/typescript-react-apollo": "1.3.1",
+    "@graphql-codegen/cli": "^1.13.0",
+    "@graphql-codegen/typescript": "1.13.0",
+    "@graphql-codegen/typescript-operations": "^1.13.0",
+    "@graphql-codegen/typescript-react-apollo": "1.13.0",
     "@types/cookie": "^0.3.3",
     "@types/graphql": "^14.2.2",
     "@types/react": "^16.8.23",
